  . ming 0.3b
  . libpq (PostgreSQL) 8.0.1
- Fixed a bug where stream_get_meta_data() did not return the "uri" element for
  files opened with tmpname(). (Derick)
- Fixed "make test" to work for phpized extensions. (Hartmut, Jani)
- Fixed failing queries (FALSE returned) with mysqli_query() on 64 bit systems.
  (Andrey)
- Fixed bug #34257 (lib64 not handled correctly in ming extension). (Marcus)
- Fixed bug #34191 (ob_gzhandler does not enforce trailing \0). (Ilia)
- Fixed bug #34156 (memory usage remains elevated after memory limit is 
  reached). (Ilia)
- Fixed bug #34148 (+,- and . not supported as parts of scheme). (Ilia)
- Fixed bug #34103 (line numbering not maintained in dom document). (Rob)
- Fixed bug #34078 (Reflection API problems in methods with boolean or 
  null default values). (Tony)
- Fixed bug #34068 (Numeric string as array key not cast to integer in 
  wddx_deserialize()). (Ilia)
- Fixed bug #34064 (arr[] as param to function in class gives invalid opcode).
  (Dmitry)
- Fixed bug #34062 (Crash in catch block when many arguments are used).
  (Dmitry)
- Fixed bug #34045 (Buffer overflow with serialized object). (Dmitry)
- Fixed bug #33999 (object remains object when cast to int). (Dmitry)
- Fixed bug #33996 (No information given for fatal error on passing invalid
  value to typed argument). (Dmitry)
- Fixed bug #33989 (extract($GLOBALS,EXTR_REFS) crashes PHP). (Dmitry)
- Fixed bug #33987 (php script as ErrorDocument causes crash in Apache 2).
  (Ilia)
- Fixed bug #33967 (misuse of Exception constructor doesn't display errorfile).
  (Jani)
- Fixed bug #33958 (duplicate cookies and magic_quotes=off may cause a crash).
  (Ilia)
- Fixed bug #33940 (array_map() fails to pass by reference when called
  recursively). (Dmitry)
- Fixed bug #33917 (number_format() output with > 1 char separators). (Jani)
- Fixed bug #33904 (input array keys being escaped when magic quotes is off). 
  (Ilia)