@@ -16,6 +16,7 @@ PHP                                                                        NEWS
 - Fixed failing queries (FALSE returned) with mysqli_query() on 64 bit systems.
   (Andrey)
 - Fixed bug #34257 (lib64 not handled correctly in ming extension). (Marcus)
+- Fixed bug #34221 (Compiling xmlrpc as shared fails other parts). (Jani)
 - Fixed bug #34191 (ob_gzhandler does not enforce trailing \0). (Ilia)
 - Fixed bug #34156 (memory usage remains elevated after memory limit is 
   reached). (Ilia)
